# Pico-pi-adc-w-MCP3301

Potentiometer_Pressure/: CMakeLists.txt  pressure_rig_16.cpp
pico_mcp_ex/: CMakeLists.txt  pico.c
